review(xl-pgq): 收 /code-review 两轴 —— 探针补复现与 --clear 文档、复用 BattleDriver.get、load 参数改名 mode
Standards 轴：
- BattleRenderer.load 的参数原叫 buffer，与闭包里那张 RenderTexture 同名，改 mode（同行改，行号不动）；
- 探针自带的 field() 与 BattleDriver.get() 逐行同形，删掉、改用后者（get 由 private 放宽成包内可见）；
- usage() 与类注释补上 --clear。
Spec 轴：探针类注释补「复现」一节（命令行 + 容差 8 的出处 + 读数）。

复核：重编后重跑 carry / carry --clear，diff 输出与首轮逐字相同；错参退出码 2；
tools/test.sh 14 类 237 条断言 0 失败；pnpm typecheck 0；pnpm test 170 文件 3036 条全过。

篡改（cp 备份 → 断言命中 → 跑 → cp 还原 → cmp）：
- T1 load('keep') 也清缓冲（= 改前行为）：bufferPlan.test 红 2 条。改前没有这个测试（改前根本没有 'keep'）。
- T2 load 不重置拍号：红 1 条（「换场撞上末拍」那条）。
- T3 去掉同拍去重：红 1 条。
- T4 useGame 传 'fresh'：src/game src/battle src/app src/replay 42 文件 782 条**全绿** —— 负结果：
  游戏侧 'keep' 这个调用点没有任何判据守着（渲染器与 useGame 的这一段都没有测试缝）。
battle-script3 跨端逐帧比对（'fresh' 那一支）：通过，最差 0.5064%，硬比区 45 帧逐像素相等，与 xl-84z 读数相同。